objects/gvp__Account_Team__c.object
<CustomObject>
    <fields>
        <fullName>gvp__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Team</relationshipLabel>
        <relationshipName>Account_Team</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Alternate_Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Contact 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Team4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Alternate_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Team5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Alternate_Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Contact 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Team6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Alternate_User_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate User 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Alternate_User_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate User 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Alternate_User_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate User 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_1__c</fullName>
        <label>Custom 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_2__c</fullName>
        <label>Custom 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_3__c</fullName>
        <label>Custom 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Enable_Sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine if GVP trigger logic should update sharing table</description>
        <inlineHelpText>Flag to determine if GVP trigger logic should update sharing table</inlineHelpText>
        <label>Enable Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Manager_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Manager_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Manager_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Manager_Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager Contact 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Team1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Manager_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Team2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Manager_Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager Contact 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Team3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__SalesPerson_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesPerson Contact 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__SalesPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesPerson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Sales_Team_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team Division</label>
        <referenceTo>gvp__Sales_Team_Division__c</referenceTo>
        <relationshipLabel>Account Teams</relationshipLabel>
        <relationshipName>Account_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Team</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACTTM-{00000000}</displayFormat>
        <label>Account Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>